src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Manager2__c</fullName>
        <label>Manager2</label>
        <relationshipName>Manager2</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Territory_Reference2__c</fullName>
        <label>Territory_Reference2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DEV</fullName>
                </value>
                <value>
                    <fullName>DEV_JAVA</fullName>
                </value>
                <value>
                    <fullName>DEV_Salesforce</fullName>
                </value>
                <value>
                    <fullName>TECH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territory_Reference__c</fullName>
        <label>Territory Reference</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WTRC_Master__c</fullName>
        <description>WTRC Master</description>
        <label>WTRC Master</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WTRC_Username__c</fullName>
        <description>WTRC Username</description>
        <label>WTRC Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>computerprofile__cfp_Login__c</fullName>
        <label>CFP Login</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>computerprofile__cfp_Password__c</fullName>
        <label>Password</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__API_URL__c</fullName>
        <formula>$Api.Partner_Server_URL_290</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Hide_Copado_feedback__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The visibility of the message asking users to rate &amp; feedback Copado on the AppExchange is controlled here.</inlineHelpText>
        <label>Hide Copado feedback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>skyvvasolutions__CIM_LICENCE_KEY__c</fullName>
        <description>Used to store license key for SKYVVA Integration Suite</description>
        <inlineHelpText>Used to store license key for SKYVVA Integration Suite. Please enter a valid license key here</inlineHelpText>
        <label>SKYVVA LICENSE KEY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>CORE.USERS.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>